k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /temperature
            backend:
              service:
                name: devops-hive
                port:
                  number: 8080
          - pathType: Prefix
            path: /metrics
            backend:
              service:
                name: devops-hive
                port:
                  number: 80
          - pathType: Prefix
            path: /version
            backend:
              service:
                name: devops-hive
                port:
                  number: 80
